fix parallax on mobile

--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -14,6 +14,9 @@ section {
     margin: 2rem auto;
     text-shadow: var(--text-shadow);
   }
+  @media (max-width: 600px) {
+    width: 90%;
+  }
 }
 .container {
   width: 100vw;
